[FIX] align sequence selection slider

--- a/public/styles/blast-visualization.css
+++ b/public/styles/blast-visualization.css
@@ -49,7 +49,7 @@
 
 .flat-slider{
    width: 89%;
-    margin-left: 2em !important;
+    margin-left: 6em !important;
     margin-top: 2em;
     max-width: 774px;
 }
